# ros_foundation_course

./: README.md
amr/amr_msgs/: CMakeLists.txt  package.xml
amr/amr_msgs/action/: ExecutePath.action  MoveTo.action
amr/amr_msgs/msg/: PathExecutionFailure.msg
amr/amr_srvs/: CMakeLists.txt  package.xml
amr/amr_srvs/srv/: GetNearestOccupiedPointInCone.srv  GetNearestOccupiedPointOnBeam.srv  GetPoseLikelihood.srv  IsLineSegmentFree.srv  IsPointFree.srv  PlanPath.srv
amr/amr_stage/: CMakeLists.txt  README.md  package.xml
amr/amr_stage/cfg/cpp/amr_stage/: StageConfig.h
amr/amr_stage/docs/: StageConfig-usage.dox  StageConfig.dox
amr/amr_stage/src/amr_stage/cfg/: StageConfig.py
amr/amr_stage_worlds/: package.xml
amr/amr_stage_worlds/models/: hokuyo.inc
amr/amr_stage_worlds/worlds/: rooms.world
amr/amr_ui/: package.xml  path
amr/amr_ui/config/: default.rviz  explorer-youbot-simulation.rviz
amr/amr_ui/launch/: rviz.launch
amr/amr_ui/nodes/: move_to_client_gui.py  teleop_console.py
amr_stage/: CMakeLists.txt
amr_stage/cfg/: Stage.cfg
amr_stage/docs/: StageConfig.wikidoc
amr_stage/nodes/: stage.cpp
amr_stage_worlds/: CMakeLists.txt
amr_ui/: CMakeLists.txt
doc/: amr_stage_project_launch_useful_topics  (+5 more)
fc_ros_tutorials/demo_ros_custom_messages/custom_msg_example1/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_custom_messages/custom_msg_example1/msg/: NodeData.msg  NodeInfo.msg  NodesInfo.msg
fc_ros_tutorials/demo_ros_custom_messages/custom_msg_example1/ros/scripts/: custom_msg_python_simple_node
fc_ros_tutorials/demo_ros_custom_messages/custom_msg_example1/ros/src/: custom_msg_cpp_simple_node.cpp
fc_ros_tutorials/demo_ros_launch/ros_launch_example1/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_launch/ros_launch_example1/ros/launch/: simple_publisher_subscriber_example1.launch  simple_publisher_subscriber_example2.launch  simple_publisher_subscriber_example3.launch  simple_publisher_subscriber_example4.launch
fc_ros_tutorials/demo_ros_messages/ros_cpp_common_messages_examples/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_messages/ros_cpp_common_messages_examples/ros/include/ros_cpp_common_messages_examples/: demo_class_example.h
fc_ros_tutorials/demo_ros_messages/ros_cpp_common_messages_examples/ros/src/: common_messages_example_node.cpp  demo_class_example.cpp
fc_ros_tutorials/demo_ros_messages/ros_cpp_std_messages_example/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_messages/ros_cpp_std_messages_example/ros/include/ros_cpp_std_messages_example/: demo_class_example.h
fc_ros_tutorials/demo_ros_messages/ros_cpp_std_messages_example/ros/src/: demo_class_example.cpp  std_messages_example_node.cpp
fc_ros_tutorials/demo_ros_messages/ros_python_common_messages_examples/: CMakeLists.txt  package.xml  setup.py
fc_ros_tutorials/demo_ros_messages/ros_python_common_messages_examples/ros/scripts/: common_messages_examples_node
fc_ros_tutorials/demo_ros_nodes/ros_cpp_class_based_node/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_nodes/ros_cpp_class_based_node/ros/src/: class_based_example1_node.cpp  class_based_example2_node.cpp  class_based_example3_node.cpp  demo_class_example3.cpp
fc_ros_tutorials/demo_ros_nodes/ros_python_class_based_nodes/: CMakeLists.txt  package.xml  setup.py
fc_ros_tutorials/demo_ros_nodes/ros_python_class_based_nodes/ros/scripts/: class_based_example1_node  class_based_example2_node  class_based_example3_node
fc_ros_tutorials/demo_ros_nodes/ros_python_example2_node/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_nodes/ros_python_example2_node/ros/scripts/: ros_python_example2_node
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_custom_msg_publisher_cpp_example/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_custom_msg_publisher_cpp_example/ros/src/: custom_msg_publisher_cpp_example_node.cpp
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_publisher_common_msgs_python_examples/: CMakeLists.txt  package.xml  setup.py
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_publisher_common_msgs_python_examples/ros/scripts/: publisher_common_messages_examples_node
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_publisher_std_msgs_cpp_examples/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_publisher_std_msgs_cpp_examples/ros/src/: demo_class_example.cpp  publisher_std_msgs_cpp_examples_node.cpp
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_simple_publisher_cpp_examples/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_simple_publisher_cpp_examples/ros/src/: simple_publisher_cpp_examples_node.cpp
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_simple_subscriber_cpp_examples/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_simple_subscriber_cpp_examples/ros/src/: simple_subscriber_cpp_examples_node.cpp
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_simple_subscriber_python_examples/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_simple_subscriber_python_examples/ros/scripts/: simple_subscriber_python_examples_node
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_subscriber_common_msgs_cpp_examples/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_subscriber_common_msgs_cpp_examples/ros/src/: demo_class_example.cpp  subscriber_common_messages_example_node.cpp
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_subscriber_std_msgs_cpp_examples/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_publishers_subscribers/ros_subscriber_std_msgs_cpp_examples/ros/src/: demo_class_example.cpp  subscriber_std_msgs_cpp_examples_node.cpp
fc_ros_tutorials/demo_ros_server_client/ros_simple_client_cpp/: CMakeLists.txt  package.xml
fc_ros_tutorials/demo_ros_server_client/ros_simple_client_cpp/ros/src/: client_cpp_class_based_example_node.cpp  simple_client_cpp_example_node.cpp
(+126 files in other folders)
