<?xml version="1.0"?>
<package>
  <name>ros_launch_example1</name>
  <version>0.1.0</version>
  <description>The ros_launch_example1 package</description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>