<?xml version="1.0"?>
<package>
  <name>ros_cpp_class_based_node</name>
  <version>0.1.0</version>
  <description>The ros_cpp_class_based_node package</description>

  <maintainer email="shehzad@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
</package>