<?xml version="1.0"?>
<package>
  <name>ros_python_example2_node</name>
  <version>0.1.0</version>
  <description>The ros_python_example2_node package</description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>