<?xml version="1.0"?>
<package>
  <name>ros_publisher_std_msgs_cpp_examples</name>
  <version>0.1.0</version>
  <description>The ros_publisher_std_msgs_cpp_examples package</description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>