<?xml version="1.0"?>
<package>
  <name>ros_simple_subscriber_python_examples</name>
  <version>0.1.0</version>
  <description>The ros_simple_subscriber_python_examples package</description>

  <maintainer email="shehzad.ahmed@smail.inf.h-brs.de">Shehzad Ahmed</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>